@@ -138,6 +138,12 @@ Bug Fixes
 
 * SOLR-5893: On restarting overseer designate , move itself to front of the queue (Noble Paul)
 
+* SOLR-5874: Unsafe cast in CloudSolrServer's RouteException. Change 
+  RouteException to handle Throwable rather than Exception.
+  (Mark Miller, David Arthur)
+  
+* SOLR-5899: CloudSolrServer's RouteResponse and RouteException should be
+  publicly accessible. (Mark Miller, shalin)
 
 Optimizations
 ----------------------
